k8scoins/dep-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coinsredis
      component: redis
  template:
    metadata:
      labels:
        app: coinsredis
        component: redis
    spec: 
      containers:
      - name: redis
        image: 10.111.230.82:5000/redis:latest
        ports:
        - name: redis-port 
          containerPort: 6379
          protocol: TCP
