k8scoins/pod-redis.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-redis
  labels:
    app: coinsredis
spec:
  containers:
  - name: redis
    image: 10.111.230.82:5000/redis:latest
    ports:
    - name: redis-port 
      containerPort: 6379
      protocol: TCP
