k8scoins/pod-rng.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-rng
  labels:
    app: coinsrng
spec:
  containers:
  - name: rng
    image: 10.111.230.82:5000/rng:latest
    ports:
    - name: rng-port 
      containerPort: 80
      protocol: TCP
