k8scoins/svc-hasher.yml
apiVersion: v1
kind: Service
metadata:
  name: hasher
spec:
  selector:
    app: coinshasher
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort:  hasher-port
