k8scoins/svc-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: coinsredis
  type: NodePort
  ports:
  - port: 6379
    protocol: TCP
    targetPort:  redis-port
