k8scoins/svc-rng.yml
apiVersion: v1
kind: Service
metadata:
  name:  rng
spec:
  selector:
    app: coinsrng
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort:  rng-port
