k8scoins/svc-webui.yml
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  selector:
    app: coinswebui
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort:  webui-port
