k8scoins/nwpol-hasher.yml
      
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nwpol-hasher
spec:
  podSelector:
    matchLabels:
      app: coinshasher
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: coinsworker
  - ports:
    - port: 80
      protocol: TCP
