k8scoins/nwpol-webui.yml
      
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nwpol-webui
spec:
  podSelector:
    matchLabels:
      app: coinswebui
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 80
      protocol: TCP
